Fixed alignment in ip-billing

--- a/src/assets/scss/components/_table.scss
+++ b/src/assets/scss/components/_table.scss
@@ -266,6 +266,10 @@
                     flex: 1;
                 }
             }
+
+        }
+        mat-table{
+            height: 100%;
         }
         .mat-mdc-tab-body-wrapper{
             flex: 1;
