--- a/src/assets/scss/components/mat-components/_mat-expansion-panel.scss
+++ b/src/assets/scss/components/mat-components/_mat-expansion-panel.scss
@@ -10,6 +10,9 @@
                 letter-spacing: 0.6px;
             }
         }
+        .mat-expansion-panel-content{
+            font-family: inherit;
+        }
         @include themed() {
             background-color: t($ngt-card);
             color: t($text-color);
